tests/general/phase0/ssz_generic/basic_vector/invalid/vec_uint64_8_random_one_byte_more/serialized.ssz
uх.lЙ√╚∙Й┌хвш%░Э#ж{	,T@65Ж3lиsУG∙fB┼їпкZ!(▓╝ХSGbo0╣ЄтЛv║кШ